--- a/gamezone.html
+++ b/gamezone.html
@@ -9,182 +9,239 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      background: linear-gradient(135deg, #1e1f26, #27293d);
       color: white;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
     }
 
-    .emulator-container {
-      width: 80%;
-      max-width: 900px;
-      background-color: #252525;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-      overflow: hidden;
-    }
-
-    .emulator-header {
-      background-color: #333;
-      padding: 10px;
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: 20px auto;
       text-align: center;
     }
 
-    .emulator-header h1 {
-      margin: 0;
-      font-size: 24px;
+    .header {
+      margin-bottom: 20px;
     }
 
-    .nav-button {
-      margin: 5px;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 5px;
-      background-color: #007bff;
-      color: white;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    .nav-button:hover {
-      background-color: #0056b3;
-    }
-
-    .emulator-main {
-      padding: 20px;
-      min-height: 300px;
-      background: #1e1e1e;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 18px;
-    }
-
-    .emulator-footer {
-      padding: 10px;
-      text-align: center;
-      background-color: #333;
-      font-size: 14px;
-    }
-
-    /* Game UI */
-    .game-ui {
-      text-align: center;
-    }
-
-    .game-screen {
-      width: 100%;
-      height: 200px;
-      background-color: black;
-      border: 2px solid #4caf50;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: lime;
-      font-family: monospace;
-    }
-
-    /* Buttons UI */
-    .game-buttons {
-      text-align: center;
+    .header h1 {
+      font-size: 2.5rem;
+      color: #e91e63;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     }
 
     .buttons-container {
       display: flex;
-      gap: 10px;
-      justify-content: center;
       flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
     }
 
     .game-button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      background-color: #4caf50;
-      color: white;
+      position: relative;
+      width: 150px;
+      height: 200px;
+      background: #333;
+      border: 2px solid #555;
+      border-radius: 10px;
+      overflow: hidden;
       cursor: pointer;
-      transition: background-color 0.3s ease, transform 0.2s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .game-button:hover {
-      background-color: #388e3c;
       transform: scale(1.1);
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     }
 
-    /* Animations */
-    .fade-in {
-      animation: fadeIn 0.5s ease-in-out;
+    .game-button img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
+    .game-button-title {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      font-size: 1rem;
+      padding: 5px;
+      text-align: center;
+    }
+
+    .remove-button {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      background: red;
+      border: none;
+      border-radius: 50%;
+      color: white;
+      font-size: 0.8rem;
+      width: 20px;
+      height: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .add-game-form {
+      margin: 20px auto;
+      padding: 20px;
+      background: #444;
+      border-radius: 10px;
+      width: 100%;
+      max-width: 600px;
+    }
+
+    .add-game-form input,
+    .add-game-form button {
+      margin-top: 10px;
+      width: 100%;
+      padding: 10px;
+      border-radius: 5px;
+      border: none;
+    }
+
+    .add-game-form input {
+      background: #333;
+      color: white;
+    }
+
+    .add-game-form button {
+      background: #e91e63;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .add-game-form button:hover {
+      background: #c2185b;
+    }
+
+    .iframe-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .iframe-container iframe {
+      width: 90%;
+      height: 90%;
+      border: none;
+      border-radius: 10px;
+    }
+
+    .iframe-container .close-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: #e91e63;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1.2rem;
+      z-index: 1001;
+      transition: background 0.3s ease;
+    }
+
+    .iframe-container .close-btn:hover {
+      background: #c2185b;
     }
   </style>
 </head>
 <body>
-  <div class="emulator-container">
-    <header class="emulator-header">
+  <div class="container">
+    <header class="header">
       <h1>GameZone Emulator</h1>
-      <nav>
-        <button id="loadGameUi" class="nav-button">Load Game UI</button>
-        <button id="loadButtons" class="nav-button">Load Buttons</button>
-      </nav>
     </header>
 
-    <main id="main-content" class="emulator-main">
-      <p>Select a component to load.</p>
-    </main>
+    <div class="buttons-container" id="buttons-container"></div>
 
-    <footer class="emulator-footer">
-      <p>GameZone Emulator © 2025</p>
-    </footer>
+    <form class="add-game-form" id="add-game-form">
+      <h2>Add a New Game</h2>
+      <input type="text" id="game-title" placeholder="Game Title" required>
+      <input type="url" id="game-image-url" placeholder="Game Image URL" required>
+      <input type="url" id="game-url" placeholder="Game Embed URL (iframe)" required>
+      <button type="submit">Add Game</button>
+    </form>
+  </div>
+
+  <div class="iframe-container" id="iframe-container">
+    <button class="close-btn" id="close-iframe">Close</button>
+    <iframe id="game-iframe" src=""></iframe>
   </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      const mainContent = document.getElementById("main-content");
+      const buttonsContainer = document.getElementById("buttons-container");
+      const addGameForm = document.getElementById("add-game-form");
+      const iframeContainer = document.getElementById("iframe-container");
+      const gameIframe = document.getElementById("game-iframe");
+      const closeIframe = document.getElementById("close-iframe");
 
-      function loadGameUi() {
-        const gameUi = `
-          <div class="game-ui">
-            <h2>Game Screen</h2>
-            <div class="game-screen">
-              <p>Game is loading...</p>
-            </div>
-          </div>
-        `;
-        mainContent.innerHTML = gameUi;
-        mainContent.classList.add("fade-in");
-      }
+      // Load saved games from localStorage
+      const savedGames = JSON.parse(localStorage.getItem("games")) || [];
 
-      function loadButtons() {
-        const buttons = `
-          <div class="game-buttons">
-            <h2>Game Controls</h2>
-            <div class="buttons-container">
-              <button class="game-button">Up</button>
-              <button class="game-button">Down</button>
-              <button class="game-button">Left</button>
-              <button class="game-button">Right</button>
-              <button class="game-button">Start</button>
-              <button class="game-button">Select</button>
-            </div>
-          </div>
-        `;
-        mainContent.innerHTML = buttons;
-        mainContent.classList.add("fade-in");
-      }
+      const renderGames = () => {
+        buttonsContainer.innerHTML = ""; // Clear existing buttons
+        savedGames.forEach((game, index) => {
+          const gameButton = document.createElement("div");
+          gameButton.classList.add("game-button");
+          gameButton.innerHTML = `
+            <img src="${game.image}" alt="${game.title}">
+            <div class="game-button-title">${game.title}</div>
+            <button class="remove-button" data-index="${index}">x</button>
+          `;
+          gameButton.querySelector(".remove-button").addEventListener("click", (e) => {
+            e.stopPropagation();
+            savedGames.splice(index, 1);
+            localStorage.setItem("games", JSON.stringify(savedGames));
+            renderGames();
+          });
+          gameButton.addEventListener("click", () => {
+            gameIframe.src = game.url;
+            iframeContainer.style.display = "flex";
+          });
+          buttonsContainer.appendChild(gameButton);
+        });
+      };
 
-      document.getElementById("loadGameUi").addEventListener("click", loadGameUi);
-      document.getElementById("loadButtons").addEventListener("click", loadButtons);
+      renderGames();
+
+      addGameForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        const title = document.getElementById("game-title").value;
+        const image = document.getElementById("game-image-url").value;
+        const url = document.getElementById("game-url").value;
+
+        savedGames.push({ title, image, url });
+        localStorage.setItem("games", JSON.stringify(savedGames));
+        renderGames();
+        addGameForm.reset();
+      });
+
+      closeIframe.addEventListener("click", () => {
+        iframeContainer.style.display = "none";
+        gameIframe.src = ""; // Clear iframe source
+      });
     });
   </script>
 </body>
